--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
-        "vite": "^5.0"
+        "vite": "^6.2.1"
     },
     "dependencies": {
         "chart.js": "^4.4.8",
         "datatables.net": "^2.2.2",
         "datatables.net-dt": "^2.2.2",
         "flowbite": "^2.5.2",
-        "sweetalert2": "^11.14.3",
+        "fullcalendar": "^6.1.15",
+        "sweetalert2": "^11.6.13",
         "tailwindcss": "^3.3.0"
     }
 }
